--- a/Business/Business.csproj
+++ b/Business/Business.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\MyFinalProject\Core\Core.csproj" />
     <ProjectReference Include="..\DateAccess\DateAccess.csproj" />
     <ProjectReference Include="..\Entites\Entites.csproj" />
   </ItemGroup>
