--- a/WepAPI/WepAPI.csproj
+++ b/WepAPI/WepAPI.csproj
@@ -11,8 +11,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\MyFinalProject\Core\Core.csproj" />
     <ProjectReference Include="..\Business\Business.csproj" />
+    <ProjectReference Include="..\Core\Core.csproj" />
     <ProjectReference Include="..\DateAccess\DateAccess.csproj" />
     <ProjectReference Include="..\Entites\Entites.csproj" />
   </ItemGroup>
